[package]
name = "netidx-wolfram"
version = "0.1.0"
edition = "2021"
description = "Wolfram language interface to netidx"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.28"
fxhash = "0.2.1"
netidx = "0.19"
once_cell = "1.17.1"
rust_decimal = "1.29.1"
tokio = { version = "1.28.2", features = ["full"] }
wolfram-library-link = "0.2.9"
